june/code/nadieh/css/style.css
@font-face {
    font-family: "Anime Ace";
    src: url("../css/animeace2_reg.otf");
    font-weight: 400;
    font-style: normal;
}

html {
    --annotation-title-font-size: 15px;
    --annotation-label-font-size: 13px;
    --color-pink: #eb547f;
}

/************* general *************/
body {
    font-weight: 400;
    font-family: 'Barlow Semi Condensed', sans-serif;
    margin-top: 0px;
    font-size: 16px;
}

.outer-container {
    margin-left: auto;
    margin-right: auto;
    max-width: 1600px;
    padding-left: 20px;
    padding-right: 20px;
}

#intro-container {
    position: relative;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: flex-start;
    max-width: 1400px;
    width: calc(100% - 80px);
    margin-left: 40px;
    margin-right: 0px;
    margin-bottom: 40px;
}

#ccs-logo {
    opacity: 0.8;
    position: absolute;
    top: -50px;
    left: -120px;
    /* filter: grayscale(100%); */
    z-index: -1;
}

#title-container {
    position: relative;
    width: 55%;
}

#title {
    padding-left: 30px;
    padding-right: 20px;
}

#main-title {
    font-family: 'Anime Ace', monospace;
    font-size: 50px;
    color: #eb5580;
    mix-blend-mode: multiply;
}
#sub-title {
    font-size: 24px;
    color: #27050f;
    letter-spacing: 1.1px;
    padding-top: 60px;
    mix-blend-mode: multiply;
}

#intro {
    width: 45%;
    padding-top: 60px;
}

.anime {
    font-family: 'Anime Ace', monospace;
    color: #eb547f;
}

.intro-text {
    line-height: 1.6em;
    font-size: 17px;
    font-family: 'Barlow', sans-serif;
}
.explanation {
    /* color: #eb547f; */
    color: #838383;
    font-size: 15px;
    line-height: 1.5em;
    font-style: italic;
}

/* @media screen and (min-width: 1051px) {
    #main-title {
        background: -webkit-linear-gradient(left, #eb5580ab 0%,#eb5580 80%);
        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent;
    }
} */

@media screen and (max-width: 1450px) {
    #main-title {
        font-size: 46px;
    }
    #sub-title {
        font-size: 19px;
    }
    #ccs-logo {
        top: 0px;
    }
}

@media screen and (max-width: 1050px) {
    #title-container, #intro {
        width: 100%;
    }

    #title {
        padding-left: 0px;
    }

    #title-container {
        padding-top: 70px;
    }

    #main-title {
        font-size: 46px;
    }
    #sub-title {
        font-size: 22px;
    }

    #ccs-logo {
        top: -100px;
        left: -120px;
        max-width: 500px;
    }

    #intro-container {
        width: calc(100% - 40px);
        margin-left: 20px;
        margin-right: 20px;
    }
}

@media screen and (max-width: 400px) {
    #main-title {
        font-size: 40px;
    }
    #sub-title {
        font-size: 16px;
    }
}

/************* chart *************/

#chart-container {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    position: relative;
    margin-top: 80px;
}

#chart {
    position: relative;
}

#chart svg {
    font-family: 'Anime Ace', monospace;
    position: absolute;
    top: 0px;
    left: 50%;
    transform: translateX(-50%);
    overflow: visible;
}

canvas {
    position: absolute;
    top: 0px;
    left: 50%;
    transform: translateX(-50%);
}

.name-label {
}
.last-name-label {
    fill: #b9b9b9;
}

.chapter-number {
    fill: #6d6d6d;
}

.card-label {
    cursor: default;
}
.card-legend {
    fill: #a1a1a1;
}

.volume-arc {
    fill: none;
    stroke-linecap: round;
}

.connector, .note-line {
    stroke-linecap: round;
}
.annotation-note-title {
    font-size: var(--annotation-title-font-size);
    font-weight: 400;
}
.annotation-note-label {
    font-size: var(--annotation-label-font-size);
    font-family: 'Barlow Semi Condensed', sans-serif;
}

.note-cards .connector, .note-line {
    stroke: var(--color-pink);
}
.note-cards .annotation-note-title {
    fill: var(--color-pink);
}

/************* legend *************/

.divider-line {
    border-top: 1px solid rgba(235, 84, 127, 0.5);
    height: 5px;
    width: calc(100% - 120px);
    margin-left: 60px;
    margin-right: 60px;
}

#legend-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    /* justify-content: center; */
    align-items: flex-start;
    margin-top: 15px;
}

#legend-container > div {
    margin-left: 30px;
    margin-right: 30px;
    display: none;
}

/************* credits *************/

#credit {
    padding-top: 20px;
    padding-bottom: 25px;
    width: calc(100% - 120px);
    margin-left: 60px;
    margin-right: 60px;
    margin-top: 40px;
    border-top: 1px solid rgba(235, 84, 127, 0.5);
}

@media screen and (max-width: 1050px) {
    #credit {
        width: calc(100% - 40px);
        margin-left: 20px;
    }
}

#credit p {
	margin-top: 0px;
	margin-bottom: 3px;
}

.credit-bold {
	font-weight: 600;
	font-size: 1em;
}

.credit-note {
	line-height: 140%;
	font-size: 0.8em;
	font-weight: 400;
	color: #a5a5a5;
}

.divider {
    font-weight: 700;
    font-size: 1em;
    padding: 0px 5px;
    font-style: normal;
}

.grey {
  color: #c7c7c7;
}

a, a:link, a:visited, a:active {
    color: var(--color-pink);
    border-bottom: 1px dotted rgba(235, 84, 127, 0.5);
    text-decoration: none;
  }
  
  a:hover {
    text-decoration: none;
    border-bottom: 1px solid var(--color-pink);
  }

